# Nicholas-Klos-portfolio

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  render.yaml  tailwind.config.js  tsconfig.json  vercel.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: config.py  db.py  ingest.py  main.py  models.py  schemas.py
backend/app/rag/: chunker.py  claude.py  embed.py  retrieve.py  system_prompt.py
backend/app/routers/: chat.py
backend/app/services/: email.py  ratelimit.py
backend/app/tools/: __init__.py  base.py  draft_intro_email.py  request_human_followup.py  schedule_call.py  suggest_follow_ups.py  surface_projects.py  surface_resume.py
backend/corpus/bio/: currently.md  education.md  experience-fsec.md  experience-incepta.md  experience-lifespreak.md  experience-npe.md  experience-pwc.md  resume.md  summary.md  voice.md
backend/corpus/projects/: concrete-crack.md  f1gpt.md  fashion-cnn.md  finsight-backend.md  serie-a.md  sql-warehouse.md
backend/tests/: test_chat.py  test_chunker.py  test_config.py  test_email_service.py  test_embed.py  test_ratelimit.py  test_retrieve.py  test_tool_draft_intro_email.py  test_tool_request_human_followup.py  test_tool_schedule_call.py  test_tool_surface_projects.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AnimatedButton.tsx  Navbar.tsx  TypeAnimation.module.css  TypeAnimation.tsx
src/lib/: about.ts  (+6 more)
(+19 files in other folders)
